Solved Dashboard title overflow issue

--- a/Frontend/src/components/DashboardBox.css
+++ b/Frontend/src/components/DashboardBox.css
@@ -26,40 +26,29 @@
     font-family: "Neucha", cursive;
 }
 
-
-.editButton{
-    text-align: center;
-    margin-right: 2%;
-    color: rgb(101, 58, 97);
-    background-color:#ffa8B6;
-    border-radius: 35%;
-    width: 15%;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    font-family: "Neucha", cursive;
-}
-
-.editButtonTitle{
-    text-align: center;
-    margin-right: 2%;
-    color: rgb(101, 58, 97);
-    background-color:#ffa8B6;
-    border-radius: 35%;
-    width: 15%;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-    font-family: "Neucha", cursive;
-}
-
 .box {
     border: 3px solid transparent;
     border-radius: 0%;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    background: linear-gradient(#d3870d, #2f0b73) padding-box;
+    background: linear-gradient(#706669, #f38d9e) padding-box;
     width: 250px;
     height: 250px;
     padding-top: 1%;
     padding-left: 1%;
+}
+
+.DashboardTitle{
+    text-align: center;
+    font-weight: bold;
+    cursor: pointer;
+    font-family: "Neucha", cursive;
+    font-size: 34px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.DashboardElement{
+    margin-left: 10px;
+    margin-bottom: 5px;
 }
