--- a/Frontend/src/components/LoginPage.css
+++ b/Frontend/src/components/LoginPage.css
@@ -5,16 +5,6 @@
     font-weight: bolder;
 }
 
-.welcomeLink{
-    margin-top: 3%;
-    position: absolute;
-    color: rgb(101, 58, 97);
-    text-align: center;
-    width: 90px;
-    height: 20px;
-    border: 2px solid rgb(3, 59, 21);
-}
-
 .loginForm{
     margin-top:10%;
     border: 3px solid transparent;
